--- a/app-cpu.json
+++ b/app-cpu.json
@@ -1,13 +1,13 @@
 {
   "id": "cookbook-jupyter-template-cpu",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Jupyter Lab environment for CPU",
   "owner": "${apiUserId}",
   "enabled": true,
   "runtime": "SINGULARITY",
   "runtimeVersion": null,
   "runtimeOptions": ["SINGULARITY_RUN"],
-  "containerImage": "docker://ghcr.io/in-for-disaster-analytics/cookbook-jupyter-template-cpu:0.0.2",
+  "containerImage": "docker://ghcr.io/mosiwsp/werc_tacc-cpu:sha-78d4f33",
   "jobType": "BATCH",
   "maxJobs": -1,
   "maxJobsPerUser": -1,
